Add "courses_data for class" api route
this route allows you for a specific class to get all the modules and a list of informations about them, duration, finished or not, number of hours, etc...
